--- a/src/app/components/admin-components/admin-navigation-menu/admin-navigation-menu.component.css
+++ b/src/app/components/admin-components/admin-navigation-menu/admin-navigation-menu.component.css
@@ -9,13 +9,13 @@ nav a {
     padding: 10px;
     flex: 1;
     text-decoration: none;
-    color: rgba(226, 111, 10);
+    color: rgb(172 93 25);
     display: flex;
     align-items: center;
 }
 
 nav .active {
-    background: rgba(226, 111, 10);
+    background: rgb(172 93 25);
     color: white;
 }
 
@@ -24,7 +24,7 @@ nav a:hover {
 }
 
 nav .active:hover {
-    background: rgba(226, 111, 10);
+    background: rgb(172 93 25);
     color: white;
 }
 
