--- a/src/app/components/admin-dashboard/admin-dashboard.component.css
+++ b/src/app/components/admin-dashboard/admin-dashboard.component.css
@@ -6,7 +6,7 @@
 
 header {
     height: 50px;
-    background: rgba(226, 111, 10);
+    background: rgb(172 93 25);
     margin-bottom: 20px;
     display: flex;
     flex-direction: row;
