--- a/src/app/components/home-components/ngo/ngo.component.html
+++ b/src/app/components/home-components/ngo/ngo.component.html
@@ -16,7 +16,7 @@
             </div>
             <div class="form-row">
                 <div class="form-col">
-                    <mat-form-field class="example-full-width" appearance="fill">
+                    <mat-form-field  appearance="fill">
                         <mat-label>Password</mat-label>
                         <input type="password" formControlName="Password" matInput >
                     </mat-form-field>
@@ -45,7 +45,7 @@
             </div>
             <div class="form-row">
                 <div class="form-col">
-                    <mat-form-field class="example-full-width" appearance="fill">
+                    <mat-form-field  appearance="fill">
                         <mat-label>Password</mat-label>
                         <input type="password" formControlName="Password" matInput >
                     </mat-form-field>
