--- a/src/app/components/ngo-dashboard-components/forms/ngo-organization-details/ngo-organization-details.component.html
+++ b/src/app/components/ngo-dashboard-components/forms/ngo-organization-details/ngo-organization-details.component.html
@@ -3,7 +3,7 @@
 
     <div class="form-row">
         <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field  appearance="fill">
                 <mat-label>Ngo Id</mat-label>
                 <input formControlName="NgoId" matInput >
             </mat-form-field>
@@ -13,7 +13,7 @@
 
     <div class="form-row">
         <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field  appearance="fill">
                 <mat-label>Organization Name</mat-label>
                 <input formControlName="OrganizationName" matInput >
             </mat-form-field>
@@ -22,13 +22,13 @@
 
     <div class="form-row">
         <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field  appearance="fill">
                 <mat-label>Chairman Name</mat-label>
                 <input formControlName="ChairmanName" matInput >
             </mat-form-field>
         </div>
         <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field  appearance="fill">
                 <mat-label>Secretary Name</mat-label>
                 <input maxlength="12" formControlName="SecretaryName" matInput >
             </mat-form-field>
@@ -37,13 +37,13 @@
 
     <div class="form-row">
         <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field  appearance="fill">
                 <mat-label>Pan</mat-label>
                 <input formControlName="Pan" matInput >
             </mat-form-field>
         </div>
         <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field  appearance="fill">
                 <mat-label>Website URL</mat-label>
                 <input formControlName="Website" matInput >
             </mat-form-field>
