--- a/src/app/components/step-dashboard-components/forms/step-address-details/step-address-details.component.html
+++ b/src/app/components/step-dashboard-components/forms/step-address-details/step-address-details.component.html
@@ -3,7 +3,7 @@
 
     <div class="form-row">
         <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field  appearance="fill">
                 <mat-label>Trainee Id</mat-label>
                 <input formControlName="TraineeId" matInput >
             </mat-form-field>
@@ -13,7 +13,7 @@
     
     <div class="form-row">
         <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field  appearance="fill">
                 <mat-label>State</mat-label>
                 <input formControlName="State" matInput >
             </mat-form-field>
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field  appearance="fill">
                 <mat-label>City</mat-label>
                 <input formControlName="City" matInput >
             </mat-form-field>
@@ -42,7 +42,7 @@
 
     <div class="form-row">
         <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field  appearance="fill">
                 <mat-label>District</mat-label>
                 <input formControlName="District" matInput >
             </mat-form-field>
@@ -55,7 +55,7 @@
             </div>
         </div>
         <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field  appearance="fill">
                 <mat-label>Pincode</mat-label>
                 <input formControlName="Pincode" matInput >
             </mat-form-field>
@@ -71,7 +71,7 @@
 
     <div class="form-row">
         <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field  appearance="fill">
                 <mat-label>Address</mat-label>
                 <textarea formControlName="Address" matInput ></textarea>
             </mat-form-field>
