--- a/src/app/components/step-dashboard-components/forms/step-family-details/step-family-details.component.html
+++ b/src/app/components/step-dashboard-components/forms/step-family-details/step-family-details.component.html
@@ -3,7 +3,7 @@
 
     <div class="form-row">
         <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field  appearance="fill">
                 <mat-label>Trainee Id</mat-label>
                 <input formControlName="TraineeId" matInput >
             </mat-form-field>
@@ -13,7 +13,7 @@
     
     <div class="form-row">
         <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field  appearance="fill">
                 <mat-label>Mother Name</mat-label>
                 <input formControlName="MotherName" matInput >
             </mat-form-field>
@@ -26,7 +26,7 @@
             </div>
         </div>
         <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field  appearance="fill">
                 <mat-label>Mother Designation</mat-label>
                 <input formControlName="MotherDesignation" matInput >
             </mat-form-field>
@@ -42,7 +42,7 @@
 
     <div class="form-row">
         <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field  appearance="fill">
                 <mat-label>Father Name</mat-label>
                 <input formControlName="FatherName" matInput >
             </mat-form-field>
@@ -55,7 +55,7 @@
             </div>
         </div>
         <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field  appearance="fill">
                 <mat-label>Father Designation</mat-label>
                 <input formControlName="FatherDesignation" matInput >
             </mat-form-field>
@@ -71,13 +71,13 @@
 
     <div class="form-row">
         <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field  appearance="fill">
                 <mat-label>Husband Name</mat-label>
                 <input formControlName="HusbandName" matInput >
             </mat-form-field>
         </div>
         <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field  appearance="fill">
                 <mat-label>Number of Children</mat-label>
                 <input formControlName="NumberOfChildren" matInput >
             </mat-form-field>
