--- a/src/app/components/ngo-dashboard-components/forms/ngo-contact-details/ngo-contact-details.component.html
+++ b/src/app/components/ngo-dashboard-components/forms/ngo-contact-details/ngo-contact-details.component.html
@@ -3,13 +3,13 @@
 
     <div class="form-row">
         <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field  appearance="fill">
                 <mat-label>Ngo Id</mat-label>
                 <input formControlName="NgoId" matInput >
             </mat-form-field>
         </div>
         <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field  appearance="fill">
                 <mat-label>Contact</mat-label>
                 <input type="number" formControlName="ContactNo" matInput >
             </mat-form-field>
@@ -18,13 +18,13 @@
     
     <div class="form-row">
         <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field  appearance="fill">
                 <mat-label>State</mat-label>
                 <input formControlName="State" matInput >
             </mat-form-field>
         </div>
         <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field  appearance="fill">
                 <mat-label>City</mat-label>
                 <input formControlName="City" matInput >
             </mat-form-field>
@@ -33,13 +33,13 @@
 
     <div class="form-row">
         <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field  appearance="fill">
                 <mat-label>District</mat-label>
                 <input formControlName="District" matInput >
             </mat-form-field>
         </div>
         <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field  appearance="fill">
                 <mat-label>Pincode</mat-label>
                 <input formControlName="Pincode" matInput >
             </mat-form-field>
@@ -48,7 +48,7 @@
 
     <div class="form-row">
         <div class="form-col">
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field  appearance="fill">
                 <mat-label>Address</mat-label>
                 <textarea formControlName="Address" matInput ></textarea>
             </mat-form-field>
