--- a/src/app/components/ngo-dashboard-components/forms/ngo-contact-details/ngo-contact-details.component.html
+++ b/src/app/components/ngo-dashboard-components/forms/ngo-contact-details/ngo-contact-details.component.html
@@ -1,4 +1,7 @@
 <h3>Contact Details</h3>
+<error-message *ngIf="errorMessage">{{errorMessage}}</error-message>
+
+<success-message *ngIf="successMessage">{{successMessage}}</success-message>
 <form [formGroup]="contactDetails" (submit)="saveContactDetails()">
 
     <div class="form-row">
