--- a/src/app/components/ngo-dashboard-components/forms/ngo-organization-details/ngo-organization-details.component.html
+++ b/src/app/components/ngo-dashboard-components/forms/ngo-organization-details/ngo-organization-details.component.html
@@ -1,4 +1,7 @@
 <h3>Organization Details</h3>
+<error-message *ngIf="errorMessage">{{errorMessage}}</error-message>
+
+<success-message *ngIf="successMessage">{{successMessage}}</success-message>
 <form [formGroup]="organizationDetails" (submit)="saveOrganizationDetails()">
 
     <div class="form-row">
