--- a/src/app/components/home-components/ngo/ngo.component.html
+++ b/src/app/components/home-components/ngo/ngo.component.html
@@ -6,12 +6,22 @@
                     <path fill="currentColor" d="M19,3H5C3.89,3 3,3.89 3,5V9H5V5H19V19H5V15H3V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10.08,15.58L11.5,17L16.5,12L11.5,7L10.08,8.41L12.67,11H3V13H12.67L10.08,15.58Z" />
                 </svg>
                 <span>NGO Registration</span>
-            </h1>            <div class="form-row">
+            </h1>         
+            <success-message *ngIf="registerSuccessMessage">{{registerSuccessMessage}}</success-message>
+            <error-message *ngIf="registerErrorMessage">{{registerErrorMessage}}</error-message>  
+            <div class="form-row">
                 <div class="form-col">
                     <mat-form-field appearance="fill">
                         <mat-label>Username</mat-label>
                         <input type="text" formControlName="Username" matInput >
                     </mat-form-field>
+                    <div *ngIf="ngoRegisterSubmitted && ngoRegister.controls['Username'].invalid" class="form-error">
+                        <svg style="width:15px;height:15px" viewBox="0 0 24 24">
+                            <path fill="currentColor" d="M10 3H14V14H10V3M10 21V17H14V21H10Z" />
+                        </svg>
+                        <span *ngIf="ngoRegister.controls['Username'].errors!['required']">Username required</span>
+                        <span *ngIf="ngoRegister.controls['Username'].errors!['pattern']">Username should only contain alphabets and digits, mimium length 8</span>
+                    </div>
                 </div>
             </div>
             <div class="form-row">
@@ -24,7 +34,7 @@
             </div>
             <div fxLayout="row" fxLayoutAlign="space-between">
                 <button mat-flat-button  type="reset">Reset</button>
-                <button mat-flat-button color="primary" type="submit" [disabled]="ngoRegister.invalid" >Register</button>
+                <button mat-flat-button color="primary" type="submit" >Register</button>
             </div>
           </form>
     </div>
@@ -35,12 +45,22 @@
                     <path fill="currentColor" d="M19,3H5C3.89,3 3,3.89 3,5V9H5V5H19V19H5V15H3V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10.08,15.58L11.5,17L16.5,12L11.5,7L10.08,8.41L12.67,11H3V13H12.67L10.08,15.58Z" />
                 </svg>
                 <span>NGO Login</span>
-            </h1>            <div class="form-row">
+            </h1>            
+            <error-message *ngIf="loginErrorMessage">{{loginErrorMessage}}</error-message> 
+            <div class="form-row">
                 <div class="form-col">
                     <mat-form-field appearance="fill">
                         <mat-label>Username</mat-label>
                         <input type="text" formControlName="Username" matInput >
                     </mat-form-field>
+
+                    <div *ngIf="ngoRegisterSubmitted && ngoRegister.controls['Username'].invalid" class="form-error">
+                        <svg style="width:15px;height:15px" viewBox="0 0 24 24">
+                            <path fill="currentColor" d="M10 3H14V14H10V3M10 21V17H14V21H10Z" />
+                        </svg>
+                        <span *ngIf="ngoRegister.controls['Username'].errors!['required']">Username required</span>
+                        <span *ngIf="ngoRegister.controls['Username'].errors!['pattern']">Username should only contain alphabets and digits, mimium length 8</span>
+                    </div>
                 </div>
             </div>
             <div class="form-row">
@@ -53,7 +73,7 @@
             </div>
             <div fxLayout="row" fxLayoutAlign="space-between">
                 <button mat-flat-button  type="reset">Reset</button>
-                <button mat-flat-button color="primary" type="submit" [disabled]="ngoLogin.invalid">Login</button>
+                <button mat-flat-button color="primary" type="submit" >Login</button>
             </div>
           </form>
     </div>
