--- a/src/app/components/home-components/step/step.component.html
+++ b/src/app/components/home-components/step/step.component.html
@@ -9,7 +9,9 @@
                     <path fill="currentColor" d="M19,3H5C3.89,3 3,3.89 3,5V9H5V5H19V19H5V15H3V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3M10.08,15.58L11.5,17L16.5,12L11.5,7L10.08,8.41L12.67,11H3V13H12.67L10.08,15.58Z" />
                 </svg>
                 <span>STEP Login</span>
-            </h1>            <div class="form-row">
+            </h1>            
+            <error-message *ngIf="loginErrorMessage">{{loginErrorMessage}}</error-message>
+            <div class="form-row">
                 <div class="form-col">
                     <mat-form-field appearance="fill">
                         <mat-label>Username</mat-label>
@@ -25,7 +27,6 @@
                     </mat-form-field>
                 </div>
             </div>
-            <div style="color: red;" *ngIf="loginErrorMessage != ''">{{loginErrorMessage}}</div>
             <div fxLayout="row" fxLayoutAlign="space-between">
                 <button mat-flat-button  type="reset">Reset</button>
                 <button mat-flat-button color="primary" type="submit" [disabled]="stepLogin.invalid">Login</button>
@@ -66,7 +67,7 @@
                             <path fill="currentColor" d="M10 3H14V14H10V3M10 21V17H14V21H10Z" />
                         </svg>
                         <span *ngIf="stepRegister.controls['Username'].errors!['required']">Username required</span>
-                        <span *ngIf="stepRegister.controls['Username'].errors!['pattern']">Username should only contain alphabets and digits, mimium length 6</span>
+                        <span *ngIf="stepRegister.controls['Username'].errors!['pattern']">Username should only contain alphabets and digits, mimium length 8</span>
                     </div>
                 </div>
             </div>
