--- a/src/app/components/ngo-dashboard-components/forms/ngo-organization-details/ngo-organization-details.component.html
+++ b/src/app/components/ngo-dashboard-components/forms/ngo-organization-details/ngo-organization-details.component.html
@@ -18,7 +18,7 @@
         <div class="form-col">
             <mat-form-field  appearance="fill">
                 <mat-label>Organization Name</mat-label>
-                <input formControlName="OrganizationName" matInput >
+                <input formControlName="OrganisationName" matInput >
             </mat-form-field>
         </div>
     </div>
