--- a/src/app/components/home-components/ngo/ngo.component.html
+++ b/src/app/components/home-components/ngo/ngo.component.html
@@ -54,12 +54,12 @@
                         <input type="text" formControlName="Username" matInput >
                     </mat-form-field>
 
-                    <div *ngIf="ngoRegisterSubmitted && ngoRegister.controls['Username'].invalid" class="form-error">
+                    <div *ngIf="ngoLoginSubmitted && ngoRegister.controls['Username'].invalid" class="form-error">
                         <svg style="width:15px;height:15px" viewBox="0 0 24 24">
                             <path fill="currentColor" d="M10 3H14V14H10V3M10 21V17H14V21H10Z" />
                         </svg>
-                        <span *ngIf="ngoRegister.controls['Username'].errors!['required']">Username required</span>
-                        <span *ngIf="ngoRegister.controls['Username'].errors!['pattern']">Username should only contain alphabets and digits, mimium length 8</span>
+                        <span *ngIf="ngoLogin.controls['Username'].errors!['required']">Username required</span>
+                        <span *ngIf="ngoLogin.controls['Username'].errors!['pattern']">Username should only contain alphabets and digits, mimium length 8</span>
                     </div>
                 </div>
             </div>
