--- a/src/app/components/utility/logout-menu/logout-menu.component.css
+++ b/src/app/components/utility/logout-menu/logout-menu.component.css
@@ -1,18 +1,15 @@
 .logout-menu {
     position: absolute;
     top: 50px;
-    right: 10px;
-    background: white;
+    right: 20px;
+    background: transparent;
     z-index: 100;
-    width: 100px;
     height: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
     border-radius: 10px;
-    padding: 10px 20px;
 }
 
 .logout-menu > button {
@@ -20,6 +17,13 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.3);
+    background: rgb(218, 68, 68);
+    color: white;
+
 }
 
 .logout-menu > button > svg {
