--- a/src/app/components/admin-components/trainee-application-dialog/trainee-application-dialog.component.html
+++ b/src/app/components/admin-components/trainee-application-dialog/trainee-application-dialog.component.html
@@ -34,7 +34,7 @@
                             <td>{{c.category}}</td>
                             <td>{{c.religion}}</td>
                             <td>{{c.maritalStatus}}</td>
-                            <td>{{c.disability == "" ? "No" : "Yes"}}</td>
+                            <td>{{c.personWithDisability ? "Yes" : "No"}}</td>
                             <td>{{c.disabilityType}}</td>
                         </tr>
                     </tbody>
